# echo

./: .gitignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  CRUSH.md  README.md  index.html  package.json  railpack.json  startup-loading-screen.html  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-test.yml  build.yml  release.yml
.husky/: pre-commit
apps/web/: README.md  nixpacks.toml  package.json  vite.config.ts
apps/web/src/: styles.css
scripts/: bump-version.ts
src/: App.css  App.tsx  app.css  app.tsx  main.tsx  startup-loading-screen.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  audio_feedback.rs  clipboard.rs  lib.rs  logging.rs  overlay.rs  settings.rs  shortcut.rs  startup.rs  utils.rs  wayland.rs  window_effects.rs
src-tauri/src/audio_toolkit/: mod.rs
src-tauri/src/audio_toolkit/audio/: decoder.rs  mod.rs  recorder.rs  utils.rs  visualizer.rs
src-tauri/src/commands/: audio.rs  file_transcription.rs  history.rs  input_tracking.rs  mod.rs  models.rs  shell.rs  transcription.rs  tts.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/shortcut/: bindings.rs  escape.rs  init.rs  mod.rs  wayland.rs
src-tauri/src/features/shortcut/settings/: audio.rs  general.rs  input_tracking.rs  mod.rs  post_process.rs  tts.rs
src-tauri/src/helpers/: clamshell.rs
src-tauri/src/managers/: audio.rs  database.rs  history.rs  input_tracker.rs  mod.rs  model.rs  transcription.rs  tts.rs
src-tauri/src/managers/input_tracker/: database.rs  mod.rs  state.rs  types.rs
src-tauri/src/managers/input_tracker/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: accessibility-permissions.tsx  app-header.tsx  error-dialog.tsx  file-transcription-center.tsx  notification-center.tsx  sidemenu.tsx  theme-switcher.tsx  transcription-result-dialog.tsx
src/components/editor/: editor.css  markdown-editor.tsx  mention-list.tsx  mention-node.tsx  mention-suggestion.tsx  toolbar.tsx  transforms.ts  use-markdown-editor.ts
src/components/file-upload/: file-upload-zone.tsx
src/components/footer/: Footer.tsx  footer-application.tsx
src/components/icons/: echo-logo.tsx
src/components/model-selector/: download-progress-display.tsx  index.ts  model-dropdown.tsx  model-selector.tsx
src/components/motion-primitives/: animated-background.tsx
src/hooks/: use-file-transcription-listener.ts  use-file-transcription-notifications.ts  use-models.ts  useSettings.ts
src/lib/: get-strict-context.tsx  os.ts  types.ts
src/overlay/: index.html  main.tsx  recording-overlay.css  recording-overlay.tsx
src/providers/: ai-sdk-post-process-provider.tsx  index.ts  theme-provider.tsx
src/stores/: file-transcription-store.ts  model-atoms.ts  model-store.ts  notification-atoms.ts  settings-atoms.ts  settings-store.ts
(+133 files in other folders)
