[package]
name = "echo"
version = "0.2.1"
description = "Echo"
authors = ["Damien Schneider <damien-schneider>"]
edition = "2021"
license = "MIT"
default-run = "echo"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1"
tauri = { version = "2", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
    'image-png',
] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-macos-permissions = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
window-vibrancy = "0.7"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16"
anyhow = "1"
rubato = "0.16"
hound = "3.5"
symphonia = "0.5"
tauri-plugin-log = "2"
log = "0.4"
env_filter = "0.1"
tokio = "1"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
enigo = "0.6"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.30"
futures-util = "0.3"
rustfft = "6.4"
strsim = "0.11"
natural = "0.5"
chrono = "0.4"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4"
flate2 = "1"
transcribe-rs = { version = "0.2", features = ["whisper", "parakeet"] }
ferrous-opencc = "0.2"
deunicode = "1.3"
unicode-normalization = "0.1"
tts = "0.26"
whichlang = "0.1"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
